testsuite/tests/grammar/invalid_lexers/spacing_2.lkt
@spacing(1, ids)
lexer foo_lexer {
}
